[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/scripts/Bed.gd" type="Script" id=1]
[ext_resource path="res://res/sprites/env/bed_std.png" type="Texture" id=2]
[ext_resource path="res://res/sprites/characters/player/sleeping_pc.png" type="Texture" id=3]
[ext_resource path="res://scenes/Scenes/Interactable.tscn" type="PackedScene" id=4]
[ext_resource path="res://res/font.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/scripts/Dialog/DialogMessage.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 10.3616
height = 16.7988

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.55643
height = 15.6277

[sub_resource type="CapsuleShape2D" id=3]
radius = 12.4336

[sub_resource type="Animation" id=4]
resource_name = "fade"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.9, 5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.9, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel/Label:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 2.5, 2.9, 3.4, 4, 4.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "Thou art sleeping profoundly...", "Thou art sleeping profoundly...", "Thou art sleeping profoundly..


", "Thou art sleeping profoundly.
", "Thou art sleeping profoundly..
", "Thou art sleeping profoundly...
", "Thou art sleeping profoundly..
", "Thou art sleeping profoundly." ]
}

[node name="Bed" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.237003, -1.18502 )
rotation = -0.802851
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="SleepingPC" type="Sprite" parent="."]
visible = false
position = Vector2( -3.68961, -7.42055 )
texture = ExtResource( 3 )

[node name="Interactable" parent="." instance=ExtResource( 4 )]

[node name="Name" type="Label" parent="Interactable"]
visible = false
margin_left = -9.91465
margin_top = -28.9177
margin_right = 53.0853
margin_bottom = 17.0823
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = ExtResource( 5 )
text = "Bed"
__meta__ = {
"_edit_lock_": true
}

[node name="MouseArea" type="Area2D" parent="Interactable"]
editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable/MouseArea"]
position = Vector2( 0.7258, -0.725803 )
rotation = -0.767945
shape = SubResource( 2 )

[node name="ActionArea" type="Area2D" parent="Interactable"]
editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable/ActionArea"]
position = Vector2( 0.290329, 0.290318 )
rotation = -0.71733
shape = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
editor/display_folded = true
layer = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
anims/fade = SubResource( 4 )

[node name="Panel" type="Panel" parent="CanvasLayer"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="CanvasLayer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -249.572
margin_top = -24.537
margin_right = 279.428
margin_bottom = 21.463
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Thou art sleeping profoundly..."

[node name="JailTime" type="Label" parent="CanvasLayer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -458.046
margin_top = 29.7234
margin_right = 466.774
margin_bottom = 75.7234
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "JAIL"
align = 1

[node name="AfterJail" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 6 )
message = "Thou hast been freed."

[node name="Stats--" type="Node" parent="AfterJail"]
script = ExtResource( 6 )
message = "Some of thy stats have lowered as a result of thy stay"

[node name="CantUse" type="Node" parent="."]
script = ExtResource( 6 )
message = "Dost thee wish to get killed in thine sleep ? 
Thou canst use it ! "
